[style] fix flex on main content on mobile layout

--- a/client/src/styles/core/_mobileLayout.scss
+++ b/client/src/styles/core/_mobileLayout.scss
@@ -12,7 +12,7 @@
 
     #er__mobileLayout__outletWrapper {
         box-sizing: border-box;
-        // flex-grow: 1;
+        flex-grow: 1;
         margin-top: 1.5rem;
         margin-bottom: 0.5rem;
         overflow-y: scroll;
